--- a/src/css/MessageFooter.css
+++ b/src/css/MessageFooter.css
@@ -1,4 +1,27 @@
 .container {
     height: 8vh;
-    background-color: blue;
+    background-color: white;
+    border-top: 1px solid rgba(0,0,0,0.3);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.messageInput {
+    flex: 1 0 auto;
+    border : 1px solid rgba(0,0,0,0.3);
+    border-radius: 20px;
+    margin: 0px 10px;
+    min-height: 35px;
+    outline: none;
+    font-size:24px;
+    padding : 0px 10px;
+}
+
+:global .fa-arrow-circle-right {
+    font-size: 2.2rem;
+    color : rgba(0,122,255,1);
+
+
 }
