--- a/src/css/MessageHeader.css
+++ b/src/css/MessageHeader.css
@@ -1,5 +1,32 @@
 .container {
     height: 8vh;
-    background-color: red;
+    background-color: white;
+    width: 100%;
+    border-bottom: 1px solid rgba(0,0,0,0.3);
+    display: flex;
+}
 
+.buttonWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    padding: 10px;
+}
+
+:global .fa-angle-left {
+    font-size : 2.3rem;
+    color : rgba(0,122,255,1);
+}
+
+.profileWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.profileWrapper h2 {
+    font-size : 1.2rem;
+    text-transform: capitalize;
+    font-weight: bold;
 }
