--- a/src/css/App.css
+++ b/src/css/App.css
@@ -19,3 +19,11 @@
     display: flex;
     justify-content: center;
 }
+
+
+@media only screen and (max-width: 500px) {
+    
+    .container {
+        width: 100%;
+    }
+}
