--- a/src/css/MessageFooter.css
+++ b/src/css/MessageFooter.css
@@ -6,6 +6,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    min-height : 30px;
+    padding: 0px 10px;
 }
 
 .messageInput {
