--- a/src/css/MessageFooter.css
+++ b/src/css/MessageFooter.css
@@ -11,14 +11,15 @@
 }
 
 .messageInput {
-    flex: 1 0 auto;
-    border : 1px solid rgba(0,0,0,0.3);
+    
+    border : 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     margin: 0px 10px;
     min-height: 35px;
     outline: none;
     font-size:24px;
     padding : 0px 10px;
+    width: 90%;
 }
 
 :global .fa-arrow-circle-right {
